--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "scripts": {
     "build": "tsc",
     "start": "node build/seq-server.js",
-    "test": "tsc && node build/seq-test.js",
-    "dev": "tsc -w"    
+    "test-script": "node build/seq-test.js",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch",
+    "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "dev": "tsc -w"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +21,11 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.0",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   }
 }
