making npx work

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "mcp-seq",
-  "version": "0.1.0",
-  "description": "This is a MCP server for SEQ from Datalust. You can use this with Claude.ai desktop and get some insights with natural language from your SEQ server",
+  "version": "0.2.0",
+  "description": "MCP Server for Seq's API endpoints",
   "type": "module",
-  "main": "index.js",
+  "main": "build/seq-server.js",
+  "bin": {
+    "mcp-seq": "build/seq-server.js"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node build/seq-server.js",
