--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-seq",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "MCP Server for Seq's API endpoints",
   "type": "module",
   "main": "build/seq-server.js",
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.4.1",
+    "dotenv": "^16.3.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
