--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "mcp-seq",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "MCP Server for Seq's API endpoints",
   "type": "module",
   "main": "build/seq-server.js",
-  "bin": {
-    "mcp-seq": "build/seq-server.js"
-  },
+  "bin": "build/seq-server.js",
   "scripts": {
     "build": "tsc",
     "start": "node build/seq-server.js",
     "test-script": "node build/seq-test.js",
     "dev": "tsc -w"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["mcp", "seq", "logging", "claude"],
+  "author": "Ahmad Atighechi",
   "license": "ISC",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.4.1",
@@ -28,5 +26,12 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
+  },
+  "files": [
+    "build",
+    "README.md"
+  ],
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
