--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "mcp-seq",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "MCP Server for Seq's API endpoints",
   "type": "module",
   "main": "build/seq-server.js",
   "bin": "build/seq-server.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && shx chmod +x build/*.js",
+    "prepare": "npm run build",
     "start": "node build/seq-server.js",
     "test-script": "node build/seq-test.js",
     "dev": "tsc -w"
   },
-  "keywords": ["mcp", "seq", "logging", "claude"],
+  "keywords": [
+    "mcp",
+    "seq",
+    "logging",
+    "claude"
+  ],
   "author": "Ahmad Atighechi",
   "license": "ISC",
   "dependencies": {
@@ -24,6 +30,7 @@
     "@types/node": "^22.13.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
+    "shx": "^0.3.4",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   },
