--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,21 +12,32 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
+      
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Docker Setup QEMU
+        uses: docker/setup-qemu-action@v3.6.0
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+   
+      - name: Docker build and push
+        uses: docker/build-push-action@v6.15.0
+        with:
+          tags: |
+            ghcr.io/{{github.repository_owner}}/seq-mcp:latest
+            
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t ghcr.io/<your-username>/<image-name>:latest .
-          docker push ghcr.io/<your-username>/<image-name>:latest
 
       - name: Run Docker container
         run: |
-          docker run -d --name mcp-seq-container -e SEQ_API_KEY=${{ secrets.SEQ_API_KEY }} -p 8080:8080 ghcr.io/<your-username>/<image-name>:latest
+          docker run -d --name mcp-seq-container -e SEQ_API_KEY=12345 -p 8080:8080 ghcr.io/${{ github.repository_owner }}/seq-mcp:latest
 
       - name: Check Docker container status
         run: |
