--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/build-push-action@v6.15.0
         with:
           tags: |
-            ghcr.io/{{github.repository_owner}}/seq-mcp:latest
+            ghcr.io/${{github.repository_owner}}/seq-mcp:latest
             
 
 
